# math_jax

./: .doctor.exs  .gitignore  CHANGELOG.md  LICENSE  README.md  coveralls.json  mix.exs
.github/workflows/: build_v8.yml  main.yml  release.yml
lib/: math_jax.ex
lib/math_jax/: native.ex
livebooks/: rendering_pngs.livemd  rendering_svgs.livemd
native/math_jax_nif/: Cargo.toml
native/math_jax_nif/.cargo/: config.toml
native/math_jax_nif/src/: lib.rs
test/: math_jax_test.exs
