[package]
name = "math_jax_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "math_jax_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]

[dependencies]
rustler = "0.37"
mathjax_svg = "3.2"
resvg = { version = "0.44", default-features = false }
usvg = { version = "0.44", default-features = false }
tiny-skia = "0.11"
